force-app/main/default/objects/vlocity_cmt__Party__c/fields/vlocity_cmt__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the primary Account identified as this Party when the party is an Account. Where possible use Account.PartyId__c instead of this field to determine the Party which identifies any given Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Party</relationshipName>
    <type>Lookup</type>
</CustomField>