force-app/main/default/objects/vlocity_cmt__Party__c/fields/vlocity_cmt__HouseholdId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__HouseholdId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the primary Household identified as this Party when the party is a Household. Where possible use Household.PartyId__c instead of this field to determine the Party which identifies any given Household.</description>
    <label>Household</label>
    <referenceTo>vlocity_cmt__Household__c</referenceTo>
    <relationshipName>Party</relationshipName>
    <type>Lookup</type>
</CustomField>