force-app/main/default/objects/vlocity_cmt__Party__c/fields/vlocity_cmt__IsContactIdMismatch__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsContactIdMismatch__c</fullName>
    <description>Formula: True if the ContactId value of this Party record is different from the PartyEntityId value. Used in certain corner cases to repair the Party record.</description>
    <formula>If(vlocity_cmt__PartyEntityId__c != null &amp;&amp; vlocity_cmt__ContactId__c!=null &amp;&amp; vlocity_cmt__PartyEntityId__c != CASESAFEID(vlocity_cmt__ContactId__c), true, false)</formula>
    <label>Is Contact Id Mismatch</label>
    <type>Checkbox</type>
</CustomField>