force-app/main/default/objects/vlocity_cmt__Party__c/fields/vlocity_cmt__IsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsPersonAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Party is identified as a Person Account.</description>
    <label>Is Person Account</label>
    <type>Checkbox</type>
</CustomField>